/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
	id 'groovy'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.codehaus.groovy:groovy:3.0.7'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

group = 'de.fekl'
version = '1.0.0'
description = 'af-fe'
java.sourceCompatibility = JavaVersion.VERSION_15

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}
compileTestJava {
	options.compilerArgs += ['--enable-preview']
}
test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}
